# andthe-medium-python-project

./: .editorconfig  .env.example  .gitignore  pyproject.toml  readme.md
.github/: pull_request_template.md
.github/workflows/: lint-and-commit.yml
docs/: code_conduct.md  github_convention.md
shell/: remove_cache.sh  remove_logs.sh  setup.sh
src/code/utils/: __init__.py  logger.py  swapi.py
src/core/events/: __init__.py
src/core/events/mock/: __init__.py  mock_ecom.py  mock_meter.py  mock_warehouse.py
src/core/sentry/: __init__.py  sentry_wrapper.py
src/core/utils/: __init__.py  logger.py
src/demo/: __init__.py
src/demo/log_event/: __init__.py  mock_ecommerce.py
src/demo/sentry/: __init__.py  manual_exception.py  zero_error.py
src/sql/: __init__.py  sql02.sql  sql03.sql
tests/code/utils/: test_logger.py
tests/core/events/mock/: test_mock_ecom.py  test_mock_meter.py  test_mock_warehouse.py
tests/core/utils/: test_logger.py
